--- a/static/sass/partials/_type-comic.sass
+++ b/static/sass/partials/_type-comic.sass
@@ -17,10 +17,6 @@
   article
     +table-centre-child
 
-    img
-      width: 100%
-
-
   nav
     +leader(1)
     text-align: center
